--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,3 +6,32 @@ body {
     padding: 0;
     font-family: 'Roboto', sans-serif;
 }
+
+/*Navbar*/
+
+nav {
+    background-color: #A7D251;
+    font-size: 1.3em;
+    border-bottom: 13px solid #8BAE44; 
+}
+
+.logo {
+    width: 15%;
+
+}
+
+.logo img {
+    width: 50%;
+}
+
+.navbar-nav {
+    width: 80%;
+}
+
+#btnIngreso {
+    padding: 0.5em 1.6em;
+    border: 2px solid #8F55A7;
+    border-radius: 13px;
+    color: #8F55A7;
+    font-weight: bold;
+}
