--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,7 @@ body {
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 1em;
+    font-size: calc(0.75em + 1vw);
     overflow-x: hidden;
 }
 
@@ -19,7 +19,7 @@ body {
 
 nav {
     background-color: #A7D251;
-    font-size: 1.3em;
+    font-size: 0.9em;
     border-bottom: 13px solid #8BAE44; 
 }
 
@@ -49,12 +49,13 @@ nav {
 }
 
 .carousel-control-prev-icon, .carousel-control-next-icon {
-    height: 3rem;
-    width: 3rem;
+    height: 2em;
+    width: 2em;
 }
 
 .carousel-control-prev, .carousel-control-next {
     opacity: 1;
+    width: 8%;
 }
 
 .carousel-control-prev-icon {
@@ -70,6 +71,220 @@ nav {
   height: 10px;
   border-radius: 100%;
   background-color: #FFBC2B;
+}
+
+.container__carousel {
+  position: absolute;
+  right: 0px;
+  bottom: 10%;
+  width: 50%;
+  height: 15%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.carousel-item a {
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 10px 70px;
+  position: absolute;
+  background: #39D3AF;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1em;
+  line-height: 28px;
+  color: #000000;
+}
+
+.carousel-item__1 {
+  height: 85vh;
+}
+
+.carousel-item__1 h2{
+  position: absolute;
+  left: 10%;
+  top: 15%;
+  font-family: 'Acme';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 5em;
+  line-height: 82%;
+  text-transform: uppercase;
+  background: linear-gradient(90deg, #8F55A7 2.57%, #FFBC2B 33.08%, #39D3AF 57.28%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  mix-blend-mode: exclusion;
+}
+
+.carousel-item__1 p {
+  position: absolute;
+  width: 40%;
+  left: 11%;
+  top: 50%;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.5em;
+  line-height: 100%;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.carousel-item__2 {
+  height: 85vh;
+  background: linear-gradient(121.02deg, rgba(10, 252, 212, 0.15) 10.89%, rgba(255, 83, 188, 0.15) 62.64%), #1C2A54;
+  width: 100%;
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
+.carousel-item__2 h2 {
+  position: absolute;
+  right: 7%;
+  top: 10%;  
+  font-family: 'Acme';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 5em;
+  line-height: 82%;
+  display: flex;
+  align-items: flex-end;
+  text-align: center;
+  text-transform: uppercase;
+  background: linear-gradient(90deg, #8F55A7 2.57%, #FFBC2B 33.08%, #39D3AF 57.28%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  mix-blend-mode: exclusion;
+}
+
+.carousel-item__2 p {
+  position: absolute;
+  width: 45%;
+  height: 50%;
+  right: 7%;
+  top: 35%;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.3em;
+  line-height: 100%;
+  text-align: right;
+  color: #FFFFFF;
+}
+
+.carousel1_bg {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: 0px;
+  background: linear-gradient(137.48deg, rgba(255, 83, 188, 0.15) 15.13%, rgba(10, 252, 212, 0.15) 87.01%), #0F103F;
+}
+
+.carousel2_bg-effects {
+  position: relative;
+  width: 45%;
+  height: 100%;
+  left: 55%;
+  top: -10%;
+  opacity: 0.6;
+}
+
+.carousel2_bg-effects_rectangle {
+  position: absolute;
+  width: 30%;
+  height: 10%;
+  left: 65%;
+  top: 80%;
+  background: linear-gradient(90.5deg, #FE53BB 0.43%, #09FBD3 99.64%);
+  filter: blur(30px);
+  border-radius: 20%;
+}
+
+.carousel2_bg-effects_circle1 {
+  position: absolute;
+  width: 30%;
+  height: 30%;
+  left: 30%;
+  top: 10%;
+  background: #FE53BB;
+  filter: blur(80px);
+  border-radius: 50%;
+}
+
+.carousel2_bg-effects_circle2 {
+  position: absolute;
+  width: 30%;
+  height: 30%;
+  right: 0px;
+  top: 187px;
+  background: #08F7FE;
+  filter: blur(80px);
+  border-radius: 50%;
+}
+
+.img1_1 {
+  position: absolute;
+  width: 7em;
+  height: 7em;
+  right: 10%;
+  top: 5%;
+}
+
+.img1_2 {
+  position: absolute;
+  width: 10em;
+  height: 10em;
+  right: 25%;
+  top: 25%;  
+}
+
+.img1_3 {
+  position: absolute;
+  width: 10em;
+  height: 9em;
+  right: 15%;
+  top: 65%;
+}
+
+.img1_4 {
+  position: absolute;
+  width: 8em;
+  height: 8em;
+  right: 5%;
+  top: 45%;
+}
+
+.carousel--img {
+  width: 100%;
+  height: 100%;
+  clip-path: polygon(50% 0, 0 0, 0 100%, 38% 100%);
+  background:url(../assets/images/img2_1.png);
+  background-size: 100% 100%;
+  background-size: auto;
+  background-repeat:no-repeat;
+}
+.carousel--text {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  clip-path: polygon(52% 0, 100% 0, 100% 100%, 40% 100%);
+}
+
+.carousel--diagonal{
+  background-color: #8F55A7;
+  clip-path: polygon(50% 0, 52% 0, 40% 100%, 38% 100%);
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
 }
 
 /* Estilos de sección sobre nosotros */
@@ -300,6 +515,137 @@ nav {
     right: 25%;
   }
 }
+/* Estilos sección talleres */
+.section--talleres {
+  height: 100vh;
+  background: linear-gradient(121.82deg, rgba(10, 252, 212, 0.15) 11.1%, rgba(255, 83, 188, 0.15) 63.86%), #1C2A54;
+  width: 100%;
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
+.section--talleres h2 {
+  position: absolute;
+  right: 5%;
+  top: 10%;  
+  font-family: 'Acme';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 2.5em;
+  line-height: 82%;
+  display: flex;
+  align-items: flex-end;
+  text-align: center;
+  text-transform: uppercase;
+  background: linear-gradient(90deg, #8F55A7 2.57%, #FFBC2B 33.08%, #39D3AF 57.28%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  mix-blend-mode: exclusion;
+}
+
+.section--talleres p {
+  position: absolute;
+  width: 45%;
+  height: 50%;
+  right: 5%;
+  top: 35%;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1em;
+  line-height: 100%;
+  text-align: right;
+  color: #FFFFFF;
+}
+
+.section--talleres ul {
+  position: absolute;
+  width: 45%;
+  height: 30%;
+  right: 5%;
+  top: 60%;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  text-direction: left;
+  color: #fff;
+  line-height: 2em;
+}
+
+.talleres--diagonal{
+  background-color: #39D3AF;
+  clip-path: polygon(50% 0, 52% 0, 40% 100%, 38% 100%);
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+}
+
+.talleres--diagonal--borde {
+  width: 95%;
+  height: 90%;
+  margin: auto;
+  border: #39D3AF solid 4px;
+  position: absolute;
+  top: 5%;
+  left: 2.5%;
+  z-index: 1;
+}
+
+.talleres--img {
+  width: 100%;
+  height: 100%;
+  clip-path: polygon(50% 0, 0 0, 0 100%, 38% 100%);
+  background:url(../assets/images/taller1.png);
+  background-size: 100% 100%;
+  background-size: auto;
+  background-repeat:no-repeat;
+}
+.talleres--text {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  clip-path: polygon(52% 0, 100% 0, 100% 100%, 40% 100%);
+}
+
+
+/* Estilos sección cartelera */
+.section--cartelera {
+  weight: 100%;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)), url(../assets/images/cartelera_los_miserables.png);
+  background-size: cover;
+  background-repeat:no-repeat;
+  color: #FFBC2B;
+  padding: 1em;
+}
+
+.section--cartelera h2 {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 64px;
+}
+
+.section--cartelera-description{
+  display: flex;
+  flex-direction: row;
+  margin: 1em;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.section--cartelera-description h3 {
+  font-weight: 900;
+  font-size: 32px;
+}
+
+.section--cartelera-description ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 
 /* Estilos sección contacto */
 
@@ -371,7 +717,7 @@ textarea {
 
 footer {
   color: white;
-  margin-top: 5em;
+  margin-top: 4em;
   background-color: #8F55A7;
   display: flex;
   justify-content: space-between;
@@ -383,20 +729,20 @@ footer {
 
 #footer-info,
 #footer-links {
-  padding: 2em 2em 2em 2em;
+  padding: 1em;
 }
 
 #footer-info h4 {
-  margin-bottom: 0.7em;
+  margin-bottom: 0.6em;
   font-family: 'Acme';
 }
 
 #footer-links a {
   text-decoration: none;
-  margin: 0 1.3em;
+  margin: 0 1.1em;
 }
 
 #footer-links a i{
   color: white;
-  font-size: 2.5em;
+  font-size: 2em;
 }
