--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,6 +57,10 @@ nav {
 
 /* Estilos slider */
 
+#presentacion {
+  margin-bottom: -4em;
+}
+
 .carousel-control-prev-icon, .carousel-control-next-icon {
     height: 2em;
     width: 2em;
@@ -114,12 +118,12 @@ nav {
 
 .carousel-item__1 h2{
   position: absolute;
-  left: 10%;
-  top: 15%;
+  /* left: 10%;
+  top: 15%; */
   font-family: 'Acme';
   font-style: normal;
   font-weight: 400;
-  font-size: 5em;
+  /* font-size: 5em; */
   line-height: 82%;
   text-transform: uppercase;
   background: linear-gradient(90deg, #8F55A7 2.57%, #FFBC2B 33.08%, #39D3AF 57.28%);
@@ -131,15 +135,15 @@ nav {
 
 .carousel-item__1 p {
   position: absolute;
-  width: 40%;
+  /* width: 40%;
   left: 11%;
-  top: 50%;
+  top: 50%; */
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
-  font-size: 1.5em;
+  /* font-size: 1.5em; */
   line-height: 100%;
-  text-align: center;
+  /* text-align: center; */
   color: #FFFFFF;
 }
 
@@ -240,34 +244,34 @@ nav {
 
 .img1_1 {
   position: absolute;
-  width: 7em;
+  /* width: 7em;
   height: 7em;
   right: 10%;
-  top: 5%;
+  top: 5%; */
 }
 
 .img1_2 {
   position: absolute;
-  width: 10em;
+  /* width: 10em;
   height: 10em;
   right: 25%;
-  top: 25%;  
+  top: 25%; */  
 }
 
 .img1_3 {
   position: absolute;
-  width: 10em;
+  /* width: 10em;
   height: 9em;
   right: 15%;
-  top: 65%;
+  top: 65%; */
 }
 
 .img1_4 {
   position: absolute;
-  width: 8em;
+  /* width: 8em;
   height: 8em;
   right: 5%;
-  top: 45%;
+  top: 45%; */
 }
 
 .carousel--img {
@@ -276,7 +280,7 @@ nav {
   clip-path: polygon(50% 0, 0 0, 0 100%, 38% 100%);
   background:url(../assets/images/img2_1.png);
   background-size: 100% 100%;
-  background-size: auto;
+  /* background-size: auto; */
   background-repeat:no-repeat;
 }
 .carousel--text {
@@ -289,11 +293,299 @@ nav {
 
 .carousel--diagonal{
   background-color: #8F55A7;
-  clip-path: polygon(50% 0, 52% 0, 40% 100%, 38% 100%);
+  /* clip-path: polygon(50% 0, 52% 0, 40% 100%, 38% 100%); */
   height: 100%;
   width: 100%;
   position: absolute;
   top: 0;
+}
+
+@media screen and (max-width: 768px) {
+
+  .carousel-item__3 {
+    visibility: hidden;
+  }
+
+  #indicadorSlider3 {
+    display: none;
+  }
+
+  .carousel-item__1 h2 {
+    font-size: 2.5em;
+    top: 55%;
+    left: 40%;
+  }
+
+  .carousel-item__1 p {
+    font-size: 1em;
+    top: 62%;
+    left: 15%;
+    text-align: right;
+    width: 80%;
+  }
+
+
+  .img1_1 {
+    width: 5em;
+    height: 5em;
+    right: 35%;
+    top: 5%;
+  }
+  
+  .img1_2 {
+    width: 8em;
+    height: 8em;
+    right: 55%;
+    top: 15%;  
+  }
+  
+  .img1_3 {
+    width: 7em;
+    height: 6em;
+    right: 40%;
+    top: 32%;
+  }
+  
+  .img1_4 {
+    width: 6em;
+    height: 6em;
+    right: 20%;
+    top: 20%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .carousel-item__1 h2 {
+    top: 55%;
+    left: 51%;
+    font-size: 3.5em;
+  }
+
+  .carousel-item__1 p {
+    font-size: 1.2em;
+    top: 70%;
+    left: 13%;
+    text-align: right;
+  }
+
+  .img1_1 {
+    width: 6em;
+    height: 6em;
+    right: 54%;
+    top: 4%;
+  }
+  
+  .img1_2 {
+    width: 9em;
+    height: 9em;
+    right: 70%;
+    top: 15%;  
+  }
+  
+  .img1_3 {
+    width: 7em;
+    height: 6em;
+    right: 65%;
+    top: 40%;
+  }
+  
+  .img1_4 {
+    width: 6em;
+    height: 6em;
+    right: 54%;
+    top: 25%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+
+  #slider {
+    margin-bottom: -4em;
+  }
+
+  .carousel-item__3 {
+    visibility: visible;
+  }
+
+  #indicadorSlider3 {
+    display: inline;
+  }
+
+  #presentacion {
+    display: none;
+  }
+
+  .carousel-item__1 h2 {
+    /* font-size: 4em; */
+    top: 25%;
+    left: 18%;
+  }
+
+  .carousel-item__1 p {
+    /* font-size: 1.2em; */
+    top: 45%;
+    left: 15%;
+    width: 40%;
+    text-align: center;
+  }
+
+
+  .img1_1 {
+    width: 6em;
+    height: 6em;
+    right: 10%;
+    top: 5%;
+  }
+  
+  .img1_2 {
+    width: 9em;
+    height: 9em;
+    right: 22%;
+    top: 23%;  
+  }
+  
+  .img1_3 {
+    width: 8em;
+    height: 7em;
+    right: 20%;
+    top: 70%;
+  }
+  
+  .img1_4 {
+    width: 7em;
+    height: 7em;
+    right: 5%;
+    top: 35%;
+  }
+}
+
+@media screen and (min-width: 1300px) {
+
+  .carousel-item__1 p {
+    top: 45%;
+    width: 40%;
+    text-align: left;
+  }
+
+  
+  .img1_3 {
+    top: 60%;
+  }
+  
+  .img1_4 {
+    top: 40%;
+  }
+}
+
+/* Acá siguen los estilos de la imagen 2 */
+
+@media screen and (min-width: 320px) {
+
+  .carousel-item__2 h2 {
+    right: 10%;
+    top: 32%;  
+    font-size: 1.8em;
+  }
+  
+  .carousel-item__2 p {
+    width: 40%;
+    height: 50%;
+    right: 7%;
+    top: 40%;
+    font-size: 1em;
+    text-align: center;
+  
+  }
+
+  .carousel--img {
+    clip-path: polygon(50% 0, 0 0, 0 100%, 38% 100%);
+    background-size: contain;
+  }
+  .carousel--text {
+    height: 100%;
+    width: 100%;
+  }
+  
+  .carousel--diagonal{
+    clip-path: polygon(50% 0, 54% 0, 45% 100%, 38% 100%);
+    height: 44%;
+    width: 100%;
+    top: 0;
+  }
+
+  .carousel-item a {
+    padding: 8px 10px;
+    font-size: 0.8em;
+  }
+
+}
+
+@media screen and (min-width: 375px) {
+
+  .carousel-item__2 h2 {
+    font-size: 2em;
+  }
+
+  .carousel--diagonal{
+    height: 52%;
+    width: 100%;
+    top: 0;
+  }
+
+}
+
+@media screen and (min-width: 425px) {
+
+  .carousel--diagonal{
+    height: 59%;
+    width: 100%;
+    top: 0;
+  }
+
+}
+
+@media screen and (min-width: 768px) {
+
+  .carousel-item__2 h2 {
+    right: 10%;
+    top: 32%;  
+    font-size: 3em;
+  }
+  
+  .carousel-item__2 p {
+    width: 40%;
+    right: 6%;
+    top: 45%;
+  }
+  
+  .carousel--diagonal{
+    clip-path: polygon(50% 0, 52% 0, 40% 100%, 38% 100%);
+    height: 100%;
+  }
+
+  .carousel-item a {
+    padding: 10px 60px;
+    font-size: 0.8em;
+  }
+
+}
+
+@media screen and (min-width: 1200px) {
+
+  .carousel-item__2 h2 {
+    right: 13%;
+    top: 32%;  
+    font-size: 3em;
+  }
+  
+  .carousel-item__2 p {
+    top: 50%;
+  }
+
+  .carousel--img {
+    background-size: auto;
+  }
+  
 }
 
 /* Estilos de sección sobre nosotros */
