--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1092,6 +1092,73 @@ textarea {
   justify-content: center;
 }
 
+@media screen and (min-width: 320px) {
+
+  #contacto h3,
+  #ubicacion h3 {
+    font-size: 2.4em;
+    margin-left: 0.6em;
+  }
+
+  #contacto p,
+  #ubicacion p {
+    font-size: 1em;
+    margin-left: 1.5em;
+    margin-bottom: 2.5em;
+  }
+
+  #contacto-formulario {
+    margin-top: 2em;
+  }
+  
+  .contacto-formulario__input {
+    width: 90%;
+    margin-left: 1.4em;
+    margin-bottom: 1.5em;
+  }
+  
+  textarea {
+    margin-left: 1.5em;
+    width: 90%;
+    height: 8em;
+  }
+  
+  #div-btnEnviarDatos {
+    margin-left: 400px;
+    margin-top: 3em;
+  }
+  
+  #btnEnviarDatos {
+    padding: 0.6em 7em;
+  }
+}
+
+@media screen and (min-width: 768px) {
+
+  textarea {
+    margin-left: 1.5em;
+    width: 95%;
+    height: 8em;
+  }
+  
+  #div-btnEnviarDatos {
+    margin-left: 825px;
+    margin-top: 2em;
+  }
+  
+  #btnEnviarDatos {
+    padding: 0.4em 7em;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+
+  #btnEnviarDatos {
+    padding: 0.6em 7em;
+  }
+
+}
+
 /* Estilos footer */
 
 footer {
@@ -1124,4 +1191,79 @@ footer {
 #footer-links a i{
   color: white;
   font-size: 2em;
+}
+
+@media screen and (min-width: 320px) {
+
+  #footer-info {
+    line-height: 1em;
+  }
+
+  #footer-links {
+    display: flex;
+    align-items: flex-end;
+  }
+  
+  #footer-info,
+  #footer-links {
+    padding: 1em;
+  }
+  
+  #footer-info h4 {
+    font-size: 0.8em;
+  }
+
+  #footer-info p {
+    display: none;
+  }
+
+  .footer-info__responsive-text {
+    font-size: 0.6em;
+  }
+  
+  #footer-links a {
+    font-size: 0.6em;
+    margin: 0 1em;
+  }
+  
+}
+
+@media screen and (min-width: 768px) {
+
+  .footer-info__responsive-text {
+    font-size: 0.8em;
+    margin-bottom: 1em;
+  }
+  
+  #footer-links a {
+    font-size: 0.8em;
+    margin: 0 1em;
+  }
+
+  #footer-info h4 {
+    margin-bottom: 1em;
+    font-size: 1.2em;
+  }
+
+}
+
+@media screen and (min-width: 1024px) {
+
+  #footer-info h4 {
+    font-size: 1.2em;
+  }
+
+  #footer-info p {
+    display: block;
+    font-size: 1em;
+  }
+
+  .footer-info__responsive-text {
+    display: none;
+  }
+
+  #footer-links {
+    align-items: flex-start;
+  }
+
 }
