--- a/styles/styles.css
+++ b/styles/styles.css
@@ -297,7 +297,7 @@ nav {
   width: 45%;
   height: 50%;
   left: 9%;
-  top: 35%;
+  top: 45%;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
@@ -309,7 +309,7 @@ nav {
 
 .carousel-item__3 .container__carousel {
   left: 1%;
-  top: 50%;
+  bottom: 10%;
 }
 
 #presentacion {
@@ -477,9 +477,9 @@ nav {
 
 @media screen and (min-width: 1024px) {
 
-  #slider {
+  /* #slider {
     margin-bottom: -4em;
-  }
+  } */
 
   #indicadorSlider3 {
     display: inline;
@@ -661,6 +661,11 @@ nav {
 }
 
 /* Estilos de sección sobre nosotros */
+:root{
+--swiper-navigation-color: #FFBC2B; 
+--swiper-pagination-color: #FFBC2B;
+--swiper-navigation-size: 20px;
+}
 
 .container-timeline {
   height: 100%;
@@ -679,8 +684,8 @@ nav {
   background-color: #fff;
   box-shadow: 0 5px 25px 5px rgba(0, 0, 0, 0.2);
 }
-.timeline .swiper-container {
-  height: 100vh;
+.timeline .swiper {
+  height: 85vh;
   width: 100%;
   position: relative;
 }
@@ -725,6 +730,7 @@ nav {
   transform: translate3d(20px, 0, 0);
   color: #FFBC2B;
   font-weight: 400;
+  font-style: italic;
   opacity: 0;
   transition: 0.2s ease 0.4s;
 }
@@ -771,7 +777,7 @@ nav {
 .timeline .swiper-pagination::before {
   content: "";
   position: absolute;
-  left: -100px;
+  left: -80%;
   top: 0;
   height: 100%;
   width: 2px;
@@ -781,17 +787,20 @@ nav {
   width: auto;
   height: auto;
   text-align: center;
+  top: 0%;
+  right: -80%;
   opacity: 1;
   background: transparent;
   color: #FFBC2B;
   margin: 8px 0 !important;
   position: relative;
 }
+
 .timeline .swiper-pagination-bullet::before {
   content: "";
   position: absolute;
   top: 8px;
-  left: -103px;
+  left: -168%;
   width: 8px;
   height: 8px;
   border-radius: 100%;
@@ -808,8 +817,6 @@ nav {
 }
 .timeline .swiper-button-next,
 .timeline .swiper-button-prev {
-  background-size: 20px 20px;
-  top: 10%;
   width: 20px;
   height: 20px;
   margin-top: 0;
@@ -817,19 +824,18 @@ nav {
   transition: 0.2s;
 }
 .timeline .swiper-button-prev {
-  left: 7.5%;
-  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%23d4a024'%2F%3E%3C%2Fsvg%3E");
+  left: 3%;
 }
 .timeline .swiper-button-prev:hover {
   transform: translateX(-3px);
 }
 .timeline .swiper-button-next {
-  right: 7.5%;
-  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23d4a024'%2F%3E%3C%2Fsvg%3E");
+  right: 3%;
 }
 .timeline .swiper-button-next:hover {
   transform: translateX(3px);
 }
+
 @media screen and (min-width: 768px) {
   .timeline .swiper-slide::after {
     right: -30%;
@@ -843,15 +849,16 @@ nav {
     top: 50%;
     transform: translateY(-50%);
     width: 600px;
-    font-size: 11px;
+    font-size: 0.7em;
     text-align: right;
   }
   .timeline .swiper-slide .timeline-year {
     margin-bottom: 0;
-    font-size: 32px;
+    font-size: 2em;
+    font-style: italic;
   }
   .timeline .swiper-slide .timeline-title {
-    font-size: 46px;
+    font-size: 2.5em;
     margin: 0;
   }
   .timeline .swiper-pagination {
@@ -860,7 +867,7 @@ nav {
   .timeline .swiper-button-prev {
     top: 10%;
     left: auto;
-    right: 7.5%;
+    right: 5.2%;
     transform: rotate(90deg) translate(0, 10px);
   }
   .timeline .swiper-button-prev:hover {
@@ -869,7 +876,7 @@ nav {
   .timeline .swiper-button-next {
     top: auto;
     bottom: 10%;
-    right: 7.5%;
+    right: 5.2%;
     transform: rotate(90deg) translate(0, 10px);
   }
   .timeline .swiper-button-next:hover {
@@ -936,6 +943,7 @@ nav {
   border-radius: 20px;
   background-repeat: no-repeat;
   background-size: cover;
+  transition: transform 0.3s;
 }
 
 .backstage_card .card-body {
@@ -943,8 +951,11 @@ nav {
   margin-top: 7em;
   border-radius: 0 0 20px 20px;
   overflow-y: hidden;
-  color: white;
-  
+  color: white; 
+}
+
+.backstage_card:hover { 
+  transform: scale(1.1);
 }
 
 .backstage_card .card-text {
@@ -1138,6 +1149,15 @@ nav {
   clip-path: polygon(52% 0, 100% 0, 100% 100%, 40% 100%);
 }
 
+@media screen and (max-width: 700px) {
+  .talleres--text h2 {
+    width: 40%;
+  }
+  .talleres--text p {
+    top: 30%;
+  }
+}
+
 /* Estilos sección cartelera */
 
 .section--cartelera {
@@ -1172,6 +1192,19 @@ nav {
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+
+@media screen and (max-width: 700px) {
+  .section--cartelera h2 {
+    font-size: 40px;
+  }
+  .section--cartelera-description {
+    flex-direction: column;
+    margin-left: 0px;
+  }
+  .section--cartelera-description ul {
+    margin-bottom: 10px;
+  }
 }
 
 /* Estilos sección contacto */
@@ -1274,12 +1307,15 @@ textarea {
   }
   
   #div-btnEnviarDatos {
-    margin-left: 400px;
     margin-top: 3em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   
   #btnEnviarDatos {
     padding: 0.6em 7em;
+    margin-right: 0px;
   }
 }
 
@@ -1319,7 +1355,7 @@ textarea {
 
 footer {
   color: white;
-  margin-top: 4em;
+  //margin-top: 4em;
   background-color: #8F55A7;
   display: flex;
   justify-content: space-between;
@@ -1352,7 +1388,7 @@ footer {
 @media screen and (min-width: 320px) {
 
   #footer-info {
-    line-height: 1em;
+    line-height: 0.5em;
   }
 
   #footer-links {
@@ -1362,7 +1398,7 @@ footer {
   
   #footer-info,
   #footer-links {
-    padding: 1em;
+    padding: 0.5em;
   }
   
   #footer-info h4 {
