--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1111,7 +1111,7 @@ nav {
   font-family: 'Acme';
   font-style: normal;
   font-weight: 400;
-  font-size: 2.5em;
+  font-size: 2.2em;
   line-height: 82%;
   display: flex;
   align-items: flex-end;
@@ -1132,12 +1132,12 @@ nav {
   width: 45%;
   height: 50%;
   right: 5%;
-  top: 35%;
+  top: 30%;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
   font-size: 1em;
-  line-height: 100%;
+  line-height: 125%;
   text-align: right;
   color: #FFFFFF;
 }
@@ -1187,15 +1187,15 @@ nav {
 }
 
 .talleres--img2 {
-  width: 50%;
+  width: 100%;
   height: 100%;
   position: absolute;
-  right: 0;
   clip-path: polygon(50% 0, 100% 0, 100% 100%, 62% 100%);
   background:url(../assets/images/img_talleres2.png);
   background-size: 100% 100%;
   background-size: auto;
   background-repeat:no-repeat;
+  background-position: right;
 }
 
 .talleres--text {
@@ -1215,40 +1215,46 @@ nav {
 }
 
 @media screen and (max-width: 700px) {
-  .talleres--text {
+  .talleres--text, .talleres--text2 {
     position: relative; 
     clip-path: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
   }
 
-  .talleres--text h2 {
+  .talleres--text h2, .talleres--text2 h2 {
     width: 100%;
-    right: 0;
-    top: 0;
+    position: relative;
+    left: 0%;
     position: relative;
     display: block;
   }
-  .talleres--text p {
-    width: 100%;
-    right: 0;
-    top: 0;
+  .talleres--text p, .talleres--text2 p {
+    width: 90%;
+    left: 5%;
+    top: 15%;
     position: relative;
+    text-align: left;
   }
 
-  .talleres--img {
+  .talleres--img, .talleres--img2 {
     clip-path: none;
-    background:url(../assets/images/img_talleres_mobile.png);
-    height: 40%;
+    background:url(../assets/images/img_talleres1_mobile.png) no-repeat center;
+    height: 50%;
+    background-size: cover;
+    border-bottom: #39D3AF solid 10px;
   }
-  .talleres--diagonal, .talleres--diagonal--borde {
+  .talleres--img2{
+    background:url(../assets/images/img_talleres2_mobile.png) no-repeat center;
+    position: relative;
+  }
+  .talleres--diagonal, .talleres--diagonal2, .talleres--diagonal--borde {
     display: none;
   }
   .section--talleres {
     display: flex;
     flex-direction: column;
+  }
+  .section--talleres_2 {
+    flex-direction: column-reverse;
   }
 }
 
@@ -1295,6 +1301,12 @@ nav {
 }
 
 @media screen and (max-width: 700px) {
+  .section--cartelera {
+    height: 100vh;
+  }
+  .section--cartelera-description__contenedor1{
+    margin-left: 0%;
+  }
   .section--cartelera h2 {
     font-size: 40px;
   }
